Перевод чатов на сокет но с нюансом))

--- a/libs/profile/src/lib/ui/profile-card/profile-card.html
+++ b/libs/profile/src/lib/ui/profile-card/profile-card.html
@@ -20,6 +20,7 @@
     </div>
     <div class="profile-card__btns">
       <button class="btn">Подписаться</button>
+      <button (click)="sendMessage(profile.id)" class="btn">Написать</button>
     </div>
   </div>
 }
